<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.hfad.starbuzz.WordActivity">

    <TextView android:id="@+id/word_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/word"/>

    <EditText android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word_label" />

    <TextView android:id="@+id/meaning_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word"
        android:text="@string/meaning"/>

    <EditText android:id="@+id/meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meaning_label" />

    <Button android:id="@+id/update_word_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meaning"
        android:layout_marginTop="18dp"
        android:text="@string/update_word_btn"
        android:onClick="onUpdateWordBtnClick"/>

    <Button android:id="@+id/delete_word_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meaning"
        android:layout_toRightOf="@+id/update_word_btn"
        android:layout_marginTop="18dp"
        android:text="@string/delete_word_btn"
        android:onClick="onDeleteWordBtnClick"/>

</RelativeLayout>
